# updateInstaller

./: CMakeLists.txt  README.md
src/: automanager.cpp  automanager.h  configmanager.h  configmanger.cpp  funcoptions.h  main.cpp
